# CountriesVaccination

./: .gitignore  Makefile  README.md  pyproject.toml  zadacha.db
ap_zadacha/: README.md  api.yml  countries.db  main.py  mydatabase.db  pyproject.toml  testing.db  zadacha.db
ap_zadacha/components/: schemas.py
ap_zadacha/db/: config.py  database_utils.py  prepare.py
ap_zadacha/routers/: countries.py  ingestion.py  injection.py  utils.py
ap_zadacha/tests/: test_ap_zadacha.py
