[tool.poetry]
name = "audienceplatform-home-task"
version = "0.1.0"
description = ""
authors = ["BilyanaRumenova <bil.konstantinova@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.3.2"
pandas = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

